--- a/src/app/modules/gerencial/gerencial.component.scss
+++ b/src/app/modules/gerencial/gerencial.component.scss
@@ -6,7 +6,8 @@
 
   .sidenav {
     width: 235px;
-    background:$color-background ;
+    //background:$color-background ;
+    background: #bfe1ff;
   }
 
   ::ng-deep mat-drawer-content {
