--- a/src/app/modules/home/forgot-password/forgot-password.component.html
+++ b/src/app/modules/home/forgot-password/forgot-password.component.html
@@ -1,6 +1,6 @@
 <div class="voltar">
   <div class="img_voltar">
-    <img src="../../../../assets/images/icones/chevron-left-black.svg" alt="" />
+    <img src="../../../../assets/images/icones/reply-blue.svg" alt="" />
   </div>
   <div class="container_texto_voltar">
     <li class="link_voltar">
@@ -19,12 +19,19 @@
 
   <form class="form" [formGroup]="forgotForm" (ngSubmit)="forgotPassword()">
     <mat-form-field appearance="fill">
-      <mat-label>E-mail</mat-label>
+      <mat-label class="font">E-mail</mat-label>
       <input type="text" matInput formControlName="email" required />
     </mat-form-field>
 
   </form>
-  <app-button [fullSize]="true" (click)="forgotPassword()" [disabled]="forgotForm.invalid">Continuar</app-button>
+  <app-button
+    [fullSize]="true"
+    (click)="forgotPassword()"
+    [disabled]="forgotForm.invalid"
+  >
+    Continuar
+  </app-button>
+  <app-loading-effect></app-loading-effect>
   <p class="error-message" *ngIf="errorMessage">{{ errorMessage }}</p>
   <p *ngIf="successMessage">{{ successMessage }}</p>
 </section>
