--- a/src/app/modules/home/forgot-password/forgot-password.component.scss
+++ b/src/app/modules/home/forgot-password/forgot-password.component.scss
@@ -1,9 +1,25 @@
 @import '../../shared/styles/shared.scss';
 
 .texto_voltar {
-  color: #59cf50;
-  font-size: 15px;
+  color: #508bcf;
+  font-size: 20px;
   transition: transform 0.5s;
+  margin-top: 6px;
+  font-family: 'Times New Roman', Times, serif;
+}
+
+.voltar {
+  display: inline-flex;
+  gap: 10px;
+  margin-bottom: 20px;
+}
+
+.img_voltar img {
+  width: 30px;
+}
+
+.font {
+  color: blue;
 }
 
 .texto_voltar:hover {
@@ -17,12 +33,6 @@
 
 .link_voltar a {
   text-decoration: none;
-}
-
-.voltar {
-  display: inline-flex;
-  gap: 10px;
-  margin-bottom: 20px;
 }
 
 .forgot{
