--- a/src/app/modules/home/reset-password/reset-password.component.html
+++ b/src/app/modules/home/reset-password/reset-password.component.html
@@ -1,6 +1,6 @@
 <div class="voltar">
   <div class="img_voltar">
-    <img src="../../../../assets/images/icones/chevron-left-black.svg" alt="" />
+    <img src="../../../../assets/images/icones/reply-blue.svg" alt="" />
   </div>
   <div class="container_texto_voltar">
     <li class="link_voltar">
@@ -19,22 +19,22 @@
 
   <form class="form" [formGroup]="resetForm" (ngSubmit)="resetPassword()">
     <mat-form-field appearance="fill">
-      <mat-label>E-mail</mat-label>
+      <mat-label class="font">E-mail</mat-label>
       <input type="email" matInput formControlName="credential" required />
     </mat-form-field>
     <mat-form-field appearance="fill">
-      <mat-label>Token</mat-label>
+      <mat-label class="font">Token</mat-label>
       <input type="text" matInput formControlName="code" required />
     </mat-form-field>
     <mat-form-field appearance="fill">
-      <mat-label>Senha</mat-label>
+      <mat-label class="font">Senha</mat-label>
       <input matInput [type]="hide ? 'password' : 'text'" formControlName="password" required />
       <mat-icon matSuffix (click)="hide = !hide">
         {{ hide ? "visibility_off" : "visibility" }}
       </mat-icon>
     </mat-form-field>
     <mat-form-field appearance="fill">
-      <mat-label>Confirmar Senha</mat-label>
+      <mat-label class="font">Confirmar Senha</mat-label>
       <input matInput [type]="hide ? 'password' : 'text'" formControlName="confirmPassword" required />
       <mat-icon matSuffix (click)="hide = !hide">
         {{ hide ? "visibility_off" : "visibility" }}
@@ -42,6 +42,7 @@
     </mat-form-field>
   </form>
   <app-button [fullSize]="true" (click)="resetPassword()" [disabled]="resetForm.invalid">Confirmar</app-button>
+  <app-loading-effect></app-loading-effect>
   <p class="error-message" *ngIf="errorMessage">{{ errorMessage }}</p>
   <p *ngIf="successMessage">{{ successMessage }}</p>
 </section>
