--- a/src/app/modules/shared/components/menu-side-nav/menu-side-nav.component.scss
+++ b/src/app/modules/shared/components/menu-side-nav/menu-side-nav.component.scss
@@ -25,7 +25,9 @@ span {
       align-items: center;
 
       > img {
-        height: 36px;
+        margin-top: 40px;
+        width: 106px;
+        height: 136px;
         object-fit: cover;
       }
     }
