--- a/src/app/modules/criar-conta/criar-conta.component.html
+++ b/src/app/modules/criar-conta/criar-conta.component.html
@@ -1,7 +1,7 @@
 <form class="form" [formGroup]="registerForm" (ngSubmit)="onSubmit()">
   <div class="voltar">
     <div class="img_voltar">
-      <img src="../../../../assets/images/icones/chevron-left-black.svg" alt="" />
+      <img src="../../../../assets/images/icones/reply-blue.svg" alt="" />
     </div>
     <div class="container_texto_voltar">
       <li class="link_voltar">
@@ -9,45 +9,45 @@
       </li>
     </div>
   </div>
-  <mat-form-field appearance="fill">
+  <mat-form-field appearance="outline">
     <mat-label>Nome</mat-label>
     <input matInput formControlName="name" required />
   </mat-form-field>
 
-  <mat-form-field appearance="fill">
+  <mat-form-field appearance="outline">
     <mat-label>E-mail</mat-label>
     <input matInput formControlName="email" type="email" required />
   </mat-form-field>
 
-  <mat-form-field appearance="fill">
+  <mat-form-field appearance="outline">
     <mat-label>Senha</mat-label>
     <input matInput [type]="hide ? 'password' : 'text'" formControlName="password" type="password" required />
     <mat-icon matSuffix (click)="hide = !hide">{{ hide ? "visibility_off" : "visibility" }}</mat-icon>
   </mat-form-field>
 
-  <mat-form-field appearance="fill">
+  <mat-form-field appearance="outline">
     <mat-label>Papel</mat-label>
     <mat-select formControlName="role">
       <mat-option value="user">User</mat-option>
     </mat-select>
   </mat-form-field>
 
-  <mat-form-field appearance="fill">
+  <mat-form-field appearance="outline">
     <mat-label>URL da Imagem</mat-label>
     <input matInput formControlName="imageUrl" />
   </mat-form-field>
 
-  <mat-form-field appearance="fill">
+  <mat-form-field appearance="outline">
     <mat-label>Data de Nascimento</mat-label>
     <input matInput formControlName="birthday" type="date" required />
   </mat-form-field>
 
-  <mat-form-field appearance="fill">
+  <mat-form-field appearance="outline">
     <mat-label>CPF</mat-label>
     <input matInput formControlName="cpf" required />
   </mat-form-field>
 
-  <mat-form-field appearance="fill">
+  <mat-form-field appearance="outline">
     <mat-label>Telefone</mat-label>
     <input matInput formControlName="phone" required />
   </mat-form-field>
