--- a/src/app/modules/criar-conta/criar-conta.component.scss
+++ b/src/app/modules/criar-conta/criar-conta.component.scss
@@ -1,20 +1,9 @@
-.container {
-  max-width: 600px;
-  margin: 50px auto;
-  padding: 20px;
-  border: 1px solid #ccc;
-  border-radius: 10px;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  background-color: #fff;
-}
-
 .form {
   width: 900px;
   padding-top: 100px;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
-  gap: 20px;
 }
 
 .mat-form-field {
@@ -23,12 +12,30 @@
 
 button {
   align-self: flex-end;
+  width: 300px;
+  margin-bottom: 50px;
 }
 
 .texto_voltar {
-  color: #59cf50;
-  font-size: 15px;
+  color: #508bcf;
+  font-size: 20px;
   transition: transform 0.5s;
+  margin-top: 6px;
+  font-family: 'Times New Roman', Times, serif;
+}
+
+.voltar {
+  display: inline-flex;
+  gap: 10px;
+  margin-bottom: 20px;
+}
+
+.img_voltar img {
+  width: 30px;
+}
+
+.font {
+  color: blue;
 }
 
 .texto_voltar:hover {
