--- a/src/app/modules/home/home.component.scss
+++ b/src/app/modules/home/home.component.scss
@@ -3,10 +3,11 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   align-items: center;
-  background-color: $color-white;
+  background-color: $color-black;
   color: $primary;
-  height: 100vh;
-  
+  height: 116vh;
+  overflow: hidden;
+
   @media (max-width: $--mq-desktop){
     grid-template-columns: repeat(1, 1fr);
     gap: 16px;
@@ -18,6 +19,10 @@
     justify-items: center;
     grid-template-rows: 1fr auto;
     height: 100%;
+
+    .content img {
+      margin-bottom: -20px;
+    }
 
     .content{
       width: 100%;
@@ -41,6 +46,19 @@
         width: 100%;
         margin-bottom: 12px;
       }
+
+      .container-logomarca {
+        margin-left: 30px;
+        margin-bottom: -20px;
+      }
+
+      .logo_marca {
+        font-size: x-large;
+        margin-left: 70px;
+        font-weight: bold;
+        font-family:'Times New Roman', Times, serif;
+      }
+
     }
 
     ul{
@@ -49,14 +67,15 @@
       justify-content: space-between;
       list-style-type: none;
       text-align: center;
-      margin-bottom: 16px; 
+      margin-bottom: 16px;
     }
   }
 
   .side-image{
-    height: 100vh;
+    height: 116vh;
     background-color: gray;
-    img{      
+
+    img{
       width: 100%;
       height: 100%;
       object-fit: cover;
