--- a/src/app/modules/home/reset-password/reset-password.component.scss
+++ b/src/app/modules/home/reset-password/reset-password.component.scss
@@ -1,9 +1,21 @@
 @import '../../shared/styles/shared.scss';
 
 .texto_voltar {
-  color: #59cf50;
-  font-size: 15px;
+  color: #508bcf;
+  font-size: 20px;
   transition: transform 0.5s;
+  margin-top: 6px;
+  font-family: 'Times New Roman', Times, serif;
+}
+
+.voltar {
+  display: inline-flex;
+  gap: 10px;
+  margin-bottom: 20px;
+}
+
+.img_voltar img {
+  width: 30px;
 }
 
 .texto_voltar:hover {
@@ -19,10 +31,8 @@
   text-decoration: none;
 }
 
-.voltar {
-  display: inline-flex;
-  gap: 10px;
-  margin-bottom: 20px;
+.font {
+  color: blue;
 }
 
 .reset{
@@ -44,7 +54,7 @@
 
   .form{
     font-size: $font-size;
-    color: #3A3A3A;
+    color: #2398cb;
     margin-bottom: 32px;
   }
 }
