--- a/src/app/modules/home/signin/signin.component.html
+++ b/src/app/modules/home/signin/signin.component.html
@@ -2,22 +2,21 @@
   <article class="header">
     <p class="welcome">Seja bem-vindo(a)!</p>
     <p class="description">
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-      incididunt ut labore et dolore magna aliqua.
+      Digite as tuas credenciais aqui para logar no sistema
     </p>
   </article>
 
   <form class="form" [formGroup]="signinForm" >
     <mat-form-field appearance="fill">
-      <mat-label>E-mail</mat-label>
+      <mat-label class="font">E-mail</mat-label>
       <input type="text" matInput formControlName="credential"/>
     </mat-form-field>
     <mat-form-field appearance="fill">
-      <mat-label>Senha</mat-label>
+      <mat-label class="font">Senha</mat-label>
       <input matInput [type]="hide ? 'password' : 'text'"  formControlName="password"/>
       <mat-icon matSuffix (click)="hide = !hide">{{ hide ? "visibility_off" : "visibility" }}</mat-icon>
     </mat-form-field>
-    
+
     <p class="primary">
       Esqueceu sua senha?
 
@@ -46,4 +45,7 @@
       </li>
     </span>
   </p>
+
+  <app-loading-effect></app-loading-effect>
+
 </section>
