--- a/src/app/modules/home/signin/signin.component.scss
+++ b/src/app/modules/home/signin/signin.component.scss
@@ -18,9 +18,13 @@
     }
   }
 
+  .font {
+    color: blue;
+  }
+
   .form{
     font-size: $font-size;
-    color: #3A3A3A;
+    color: #2398cb;
     margin-bottom: 36px;
   }
 
@@ -41,5 +45,4 @@
   .clique_aqui:hover {
     cursor: pointer;
   }
-
 }
