--- a/src/app/modules/shared/components/menu-side-nav/menu-side-nav.component.html
+++ b/src/app/modules/shared/components/menu-side-nav/menu-side-nav.component.html
@@ -1,7 +1,7 @@
 <section class="menu">
   <div class="container">
     <div class="logo">
-      <img src="assets/images/logo.png" >
+      <img src="assets/images/keys_logo_2.png" >
     </div>
 
     <mat-list role="list">
