--- a/src/app/modules/shared/styles/variables.scss
+++ b/src/app/modules/shared/styles/variables.scss
@@ -2,5 +2,6 @@ $primary: #004D7C;
 $secondary: #1f1f1f;
 $error: #ff4d4f;
 $color-white: #fff;
+$color-black: #000;
 $color-background: #F5F5F5;
 $font-size: 14px;
