--- a/src/app/modules/gerencial/components/dashboard/dashboard.component.html
+++ b/src/app/modules/gerencial/components/dashboard/dashboard.component.html
@@ -1,21 +1,87 @@
 <div class="dashboard">
   <div class="search">
-    <app-search></app-search>
+    <app-search
+      [(textSearch)]="searchText"
+      [useButton]="false"
+      [useOptions]="false"
+      (filterClick)="onFilterClick()"
+      (textSearchChange)="onSearchChange($event)"
+      [fullSearch]="false"
+    >
+    </app-search>
   </div>
+
+  <app-cliente-modal
+    *ngIf="isModalOpen && selectedCliente"
+    [cliente]="selectedCliente"
+    (close)="closeModal()"
+  ></app-cliente-modal>
+
+
+  <mat-form-field appearance="outline" class="custom-select">
+    <mat-icon matPrefix color="primary">key</mat-icon>
+    <mat-select [(ngModel)]="selectedServices" multiple (selectionChange)="onSelectionChange($event)">
+      <mat-option *ngFor="let service of services" [value]="service">
+        {{ service.service }}
+      </mat-option>
+    </mat-select>
+    <mat-label>{{ selectedServicesText }}</mat-label>
+  </mat-form-field>
+
   <div class="cards">
     <app-dashboard-card
       [number]="formatNumber(totalChaveiros)"
-      [description]="'Chaveiros encontrados'"
+      [description]="'Chaveiros cadastrados'"
+      [icon]="'key'"
+      [iconContainerColor]="'#000000'"
+    >
+    </app-dashboard-card>
+    <app-dashboard-card
+      [number]="formatNumber(totalClientes)"
+      [description]="'Clientes encontrados'"
       [icon]="'person_outline'"
-      [iconContainerColor]="'#004D7C'"
+      [iconContainerColor]="'#000000'"
     >
     </app-dashboard-card>
     <app-dashboard-card
       [number]="(totalRecebido | currency:'BRL') ?? ''"
-      [description]="'Menor preço'"
+      [description]="'Preço por serviço'"
       [icon]="'attach_money'"
-      [iconContainerColor]="'#004D7C'"
+      [iconContainerColor]="'#000000'"
     >
     </app-dashboard-card>
   </div>
+
+
+  <!-- Adicionando uma tabela para exibir clientes paginados -->
+  <!--<div class="clientes-list">
+    <h2 class="nossos-clientes">Nossos clientes</h2>
+    <table>
+      <thead>
+        <tr>
+          <th>ID</th>
+          <th>Nome</th>
+          <th>Endereço</th>
+          <th>Status</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let cliente of clientes">
+          <td>{{ cliente.id }}</td>
+          <td>{{ cliente.name }}</td>
+          <td>{{ cliente.endereco }}</td>
+          <td>{{ cliente.status }}</td>
+        </tr>
+      </tbody>
+    </table>-->
+
+    <!-- Botão para carregar mais clientes -->
+    <!--<button class="load-more-button" (click)="loadMoreClientes()">Carregar mais</button>-->
+
+
+  <!-- Exibindo os toasts de clientes -->
+  <div *ngFor="let clienteToast of clientesToasts">
+    <app-cliente-toast [cliente]="clienteToast" (remove)="removeCliente(clienteToast)"></app-cliente-toast>
+  </div>
+
 </div>
