--- a/src/app/modules/home/forgot-password/forgot-password.component.html
+++ b/src/app/modules/home/forgot-password/forgot-password.component.html
@@ -11,7 +11,16 @@
 
 <section class="forgot">
   <article class="header">
-    <p class="welcome">Esqueceu sua senha?</p>
+    <p class="welcome">
+      <mat-icon
+        class="animated-icon"
+        color="primary"
+        style="vertical-align: middle; margin-right: 8px;"
+      >
+        help_outline
+      </mat-icon>
+      Esqueceu sua senha?
+    </p>
     <p class="description">
       Digite seu e-mail para que possamos enviar um código de verificação:
     </p>
@@ -20,6 +29,7 @@
   <form class="form" [formGroup]="forgotForm" (ngSubmit)="forgotPassword()">
     <mat-form-field appearance="fill">
       <mat-label class="font">E-mail</mat-label>
+      <mat-icon matPrefix color="primary">email</mat-icon>
       <input type="text" matInput formControlName="email" required />
     </mat-form-field>
 
@@ -29,6 +39,7 @@
     (click)="forgotPassword()"
     [disabled]="forgotForm.invalid"
   >
+
     Continuar
   </app-button>
   <app-loading-effect></app-loading-effect>
