--- a/src/app/modules/home/forgot-password/forgot-password.component.scss
+++ b/src/app/modules/home/forgot-password/forgot-password.component.scss
@@ -35,6 +35,26 @@
   text-decoration: none;
 }
 
+.animated-icon {
+  display: inline-block;
+  animation: shake 1.5s infinite;
+}
+
+@keyframes shake {
+  0%, 100% {
+    transform: rotate(0);
+  }
+  25% {
+    transform: rotate(5deg);
+  }
+  50% {
+    transform: rotate(-5deg);
+  }
+  75% {
+    transform: rotate(5deg);
+  }
+}
+
 .forgot{
   .header{
     display: flex;
