--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -10,7 +10,7 @@
       <img src="assets/images/keys_logo_2.png" width="170"/>
       <p class="container-logomarca">
         <span class="logo_marca">KEY +</span><br>
-        Faça a sua chave conosco
+        <span class="dynamic_text">{{ displayedText }}</span>
       </p>
       <router-outlet></router-outlet>
     </div>
