--- a/src/app/modules/home/home.component.scss
+++ b/src/app/modules/home/home.component.scss
@@ -50,6 +50,10 @@
       .container-logomarca {
         margin-left: 30px;
         margin-bottom: -20px;
+
+        .dynamic_text {
+          position: absolute;
+        }
       }
 
       .logo_marca {
