--- a/src/app/modules/home/reset-password/reset-password.component.html
+++ b/src/app/modules/home/reset-password/reset-password.component.html
@@ -20,14 +20,17 @@
   <form class="form" [formGroup]="resetForm" (ngSubmit)="resetPassword()">
     <mat-form-field appearance="fill">
       <mat-label class="font">E-mail</mat-label>
+      <mat-icon matPrefix color="primary">email</mat-icon>
       <input type="email" matInput formControlName="credential" required />
     </mat-form-field>
     <mat-form-field appearance="fill">
       <mat-label class="font">Token</mat-label>
+      <mat-icon matPrefix color="primary">vpn_key</mat-icon>
       <input type="text" matInput formControlName="code" required />
     </mat-form-field>
     <mat-form-field appearance="fill">
       <mat-label class="font">Senha</mat-label>
+      <mat-icon matPrefix color="primary">lock</mat-icon>
       <input matInput [type]="hide ? 'password' : 'text'" formControlName="password" required />
       <mat-icon matSuffix (click)="hide = !hide">
         {{ hide ? "visibility_off" : "visibility" }}
@@ -35,6 +38,7 @@
     </mat-form-field>
     <mat-form-field appearance="fill">
       <mat-label class="font">Confirmar Senha</mat-label>
+      <mat-icon matPrefix color="primary">lock</mat-icon>
       <input matInput [type]="hide ? 'password' : 'text'" formControlName="confirmPassword" required />
       <mat-icon matSuffix (click)="hide = !hide">
         {{ hide ? "visibility_off" : "visibility" }}
