--- a/src/app/modules/shared/components/bread-crumb/bread-crumb.component.html
+++ b/src/app/modules/shared/components/bread-crumb/bread-crumb.component.html
@@ -3,5 +3,5 @@
     <mat-icon *ngIf="showDrawerCollapse" (click)="toggleDrawerEvent.emit()">reorder</mat-icon>
     <span class="title">{{ title }}</span>
   </div>
-  <span class="subtitle">{{ subtitle }}</span>
+  <!--<span class="subtitle">{{ subtitle }}</span>-->
 </section>
