--- a/src/app/modules/criar-conta/criar-conta.component.html
+++ b/src/app/modules/criar-conta/criar-conta.component.html
@@ -28,7 +28,16 @@
   <mat-form-field appearance="outline">
     <mat-label>Papel</mat-label>
     <mat-select formControlName="role">
-      <mat-option value="user">User</mat-option>
+      <mat-option value="user">Usuário</mat-option>
+      <mat-option value="admin">Administrador</mat-option>
+    </mat-select>
+  </mat-form-field>
+
+  <mat-form-field appearance="outline">
+    <mat-label>Status</mat-label>
+    <mat-select formControlName="status" required>
+      <mat-option value="ativo">Ativo</mat-option>
+      <mat-option value="inativo">Inativo</mat-option>
     </mat-select>
   </mat-form-field>
 
@@ -39,7 +48,7 @@
 
   <mat-form-field appearance="outline">
     <mat-label>Data de Nascimento</mat-label>
-    <input matInput formControlName="birthday" type="date" required />
+    <input matInput formControlName="birthDate" type="date" required />
   </mat-form-field>
 
   <mat-form-field appearance="outline">
