--- a/src/app/modules/gerencial/components/chaveiros/components/details/details.component.html
+++ b/src/app/modules/gerencial/components/chaveiros/components/details/details.component.html
@@ -1,43 +1,32 @@
 <div class="details">
-  <app-card-section text="Dados" [useToggle]="true">
-    <div class="row">
-      <img src="assets/images/user.png" width="123" height="123" />
-      <div class="grid">
-        <app-property-value
-          property="Nome"
-          value="Ricardo Gonçalves"
-        ></app-property-value>
-        <app-property-value
-          property="CPF/CNPJ"
-          value="00000000000"
-        ></app-property-value>
-        <app-property-value
-          property="Data cadastro"
-          value="00/00/00"
-        ></app-property-value>
-        <app-property-value
-          property="Status"
-          value="Ativo"
-        ></app-property-value>
-        <app-property-value
-          property="Telefone"
-          value="(00) 00000-0000"
-        ></app-property-value>
-        <app-property-value
-          property="Email"
-          value="mail@email.com"
-        ></app-property-value>
-        <app-property-value
-          property="Assinatura/grupo"
-          value="Nome"
-        ></app-property-value>
-        <app-property-value
-          property="Data expiração"
-          value="00/00/00"
-        ></app-property-value>
+  <!-- cliente-modal.component.html -->
+  <div class="modal-overlay" (click)="closeModal()">
+    <div class="modal-content" (click)="$event.stopPropagation()">
+      <div class="card-section">
+        <div class="row items-center">
+          <ng-container>
+            <mat-icon>edit</mat-icon>
+          </ng-container>
+          <ng-container>
+            <mat-slide-toggle color="primary"></mat-slide-toggle>
+          </ng-container>
+          <ng-container>
+            <mat-icon>delete_outline</mat-icon>
+          </ng-container>
+        </div>
       </div>
-    </div>
-  </app-card-section>
+      <!--<button class="close-button" (click)="closeModal()">x</button>-->
+      <img [src]="chaveiro?.imageUrl" alt="Chaveiro Image" class="modal-image" />
+      <h2 class="nome_chaveiro">{{ chaveiro?.name }}</h2>
+      <p><strong>Telefone do chaveiro:</strong> {{ chaveiro?.phone }}</p>
+      <p><strong>Endereço do chaveiro:</strong> {{ chaveiro?.endereco }}</p>
+      <p><strong>Status:</strong> {{ chaveiro?.status }}</p>
 
-  <app-form-actions> </app-form-actions>
+      <div class="buttons">
+        <app-form-actions></app-form-actions>
+      </div>
+
+    </div>
+
+  </div>
 </div>
