--- a/src/app/modules/gerencial/components/chaveiros/components/details/details.component.scss
+++ b/src/app/modules/gerencial/components/chaveiros/components/details/details.component.scss
@@ -1,18 +1,48 @@
-.details {
-  display: grid;
-  gap: 24px;
+.buttons {
+  margin-top: 50px;
+}
 
-  .row {
-    display: flex;
-    align-items: center;
-    gap: 32px;
-    .grid {
-      width: 100%;
-      display: grid;
-      grid-template-columns: repeat(4, 1fr);
-      align-items: center;
-      gap: 8px 32px;
-    }
-  }
+.row {
+  padding-top: -20px;
+  margin-bottom: 20px;
+}
 
+.nome_chaveiro {
+  margin-bottom: 15px;
+}
+
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 2000;
+}
+
+.modal-content {
+  background: rgb(225, 223, 223);
+  padding: 20px;
+  border-radius: 8px;
+  max-width: 90%;
+  max-height: 90%;
+  overflow-y: auto;
+  text-align: left;
+  position: relative;
+}
+
+.modal-content p {
+  font-size: large;
+}
+
+.modal-image {
+  max-width: 100%;
+  max-height: 300px;
+  display: block;
+  margin: 0 auto 20px;
+  border-radius: 8px;
 }
