--- a/src/app/modules/gerencial/components/settings/components/details/details.component.html
+++ b/src/app/modules/gerencial/components/settings/components/details/details.component.html
@@ -5,39 +5,41 @@
   (click)="location.back()"
   matTooltip="Voltar"
 >
-  <mat-icon>arrow_back</mat-icon>
+  <mat-icon class="arrow_back">arrow_back</mat-icon>
 </button>
 
-<h2 class="text-3xl font-medium mb-3">{{ userId ? 'Editar' : 'Novo' }} colaborador</h2>
+<h2 class="text-3xl font-medium mb-3">{{ userId ? 'Editar' : 'Novo' }} administrador</h2>
 <section class="details">
   <app-card-section text="Dados cadastrais">
     <form class="text-sm pb-10" [formGroup]="adminForm" (submit)="onSubmit()">
       <div class="row ">
-        <mat-form-field class="field-name " appearance="fill">
+        <mat-form-field class="field-name" appearance="outline">
           <mat-label>Nome</mat-label>
+          <mat-icon color="primary" matPrefix>person</mat-icon>
           <input matInput formControlName="name" placeholder="Nome do colaborador" apenasLetras>
           <mat-error>Campo obrigatório</mat-error>
         </mat-form-field>
 
-        <mat-form-field class="field-image" appearance="fill">
+        <mat-form-field class="field-image" appearance="outline">
           <mat-label>URL da Imagem</mat-label>
+          <mat-icon color="primary" matPrefix>image</mat-icon>
           <input matInput formControlName="imageUrl" />
         </mat-form-field>
       </div>
 
       <p class="title">Acesso</p>
       <div class="row">
-        <mat-form-field class="field-email " appearance="fill">
+        <mat-form-field class="field-email " appearance="outline">
           <mat-label>E-mail</mat-label>
-          <mat-icon matPrefix>person_outline</mat-icon>
+          <mat-icon color="primary" matPrefix>email</mat-icon>
           <input type="text" matInput formControlName="email" />
           <mat-error>Campo obrigatório</mat-error>
         </mat-form-field>
 
-        <mat-form-field class="field-password " appearance="fill">
+        <mat-form-field class="field-password " appearance="outline">
           <mat-label>Senha</mat-label>
           <input matInput [type]="hide ? 'password' : 'text'" formControlName="password" />
-          <mat-icon matPrefix>lock_open</mat-icon>
+          <mat-icon color="primary" matPrefix>lock_open</mat-icon>
           <mat-icon matSuffix (click)="hide = !hide">{{ hide ? "visibility_off" : "visibility" }}</mat-icon>
           <mat-error>Campo obrigatório</mat-error>
         </mat-form-field>
