--- a/src/app/modules/gerencial/components/settings/components/list/list.component.html
+++ b/src/app/modules/gerencial/components/settings/components/list/list.component.html
@@ -1,7 +1,7 @@
 <app-list-table
   [listTable]="usersAdmin"
   [useButton]="true"
-  [buttonLabel]="'Novo colaborador'"
+  [buttonLabel]="'Novo administrador'"
   [routerLinkAction]="'/gerencial/settings/novo'"
   (clickRowEvent)="goToDetails($event)">
 </app-list-table>
