--- a/src/app/modules/shared/components/bread-crumb/bread-crumb.component.scss
+++ b/src/app/modules/shared/components/bread-crumb/bread-crumb.component.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   gap: 15px;
+  margin-top: -30px;
 
   .title-wrapper{
     display: flex;
@@ -14,10 +15,10 @@
     }
 
     .title{
-      font-size: 14px;
+      font-size: 22px;
       color: #000000;
-      font-weight: 500;
-      opacity: 0.50;
+      font-weight: bold;
+      //opacity: 0.50;
     }
   }
 
