--- a/src/app/modules/shared/components/search/search.component.scss
+++ b/src/app/modules/shared/components/search/search.component.scss
@@ -3,6 +3,7 @@
   justify-content: space-between;
   align-items: center;
   margin-bottom: 16px;
+
   .search-container {
     display: flex;
     gap: 8px;
@@ -15,8 +16,9 @@
     .input-container {
       display: flex;
       gap: 8px;
-      min-width: 300px;
+      min-width: 400px;
       align-items: center;
+
 
       &.fullSearch {
         min-width: 100%;
@@ -24,15 +26,20 @@
 
       .search-icon {
         cursor: pointer;
-        height: 40px;
-        min-width: 40px;
+        height: 58px;
+        min-width: 44px;
         display: flex;
         align-items: center;
         justify-content: center;
-        background: white;
+        background: rgb(116, 116, 116);
         border-radius: 5px;
-        border: lightgray 0.5px solid;
+        border: rgb(0, 0, 0) 0.5px solid;
       }
+
+      .text-search {
+        color: blue;
+      }
+
     }
   }
 
