--- a/src/app/modules/shared/components/toolbar/toolbar.component.scss
+++ b/src/app/modules/shared/components/toolbar/toolbar.component.scss
@@ -3,7 +3,7 @@
   height: 70px;
   display: flex;
   align-items: center;
-  border: 1px solid lightgray;
+  border: 1px solid black;
   padding: 0px 20px;
   border-radius: 12px;
   box-shadow: rgba(50, 50, 93, 0) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -52px;
@@ -11,4 +11,12 @@
   img{
     border-radius: 50%;
   }
+
+  .welcome {
+    color: #3737ff;
+    font-size: large;
+    font-weight: bold;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  }
+
 }
