--- a/src/app/modules/shared/components/bread-crumb/bread-crumb.component.html
+++ b/src/app/modules/shared/components/bread-crumb/bread-crumb.component.html
@@ -1,6 +1,6 @@
 <section class="breadcrumb-section">
   <div class="title-wrapper">
-    <mat-icon *ngIf="showDrawerCollapse" (click)="toggleDrawerEvent.emit()">reorder</mat-icon>
+    <!--<mat-icon *ngIf="showDrawerCollapse" (click)="toggleDrawerEvent.emit()">reorder</mat-icon>-->
     <span class="title">{{ title }}</span>
   </div>
   <!--<span class="subtitle">{{ subtitle }}</span>-->
