--- a/src/app/modules/shared/components/dashboard-card/dashboard-card.component.html
+++ b/src/app/modules/shared/components/dashboard-card/dashboard-card.component.html
@@ -1,5 +1,5 @@
 <div class="card">
-  <p class="value">{{number}}</p>
+  <p class="value">Total: {{number}}</p>
   <div class="icon-wrapper" [style.backgroundColor]="iconContainerColor">
     <mat-icon>{{icon}}</mat-icon>
   </div>
