--- a/src/app/modules/gerencial/components/chaveiros/components/add/add.component.html
+++ b/src/app/modules/gerencial/components/chaveiros/components/add/add.component.html
@@ -2,19 +2,27 @@
   <app-card-section text="Dados do chaveiro">
     <section class="wrapper" body>
       <div class="row">
-        <mat-form-field appearance="fill">
+        <mat-form-field appearance="outline">
           <mat-label>Nome</mat-label>
+          <mat-icon matPrefix>person_pin_circle</mat-icon>
           <input matInput apenasLetras />
         </mat-form-field>
 
-        <mat-form-field appearance="fill">
+        <mat-form-field appearance="outline">
           <mat-label>Endereço</mat-label>
+          <mat-icon matPrefix>home</mat-icon>
           <input matInput />
+        </mat-form-field>
+
+        <mat-form-field class="field-image" appearance="outline">
+          <mat-label>URL da Imagem</mat-label>
+          <mat-icon matPrefix>image</mat-icon>
+          <input id="imageUrl" matInput formControlName="imageUrl" />
         </mat-form-field>
       </div>
 
       <div class="row">
-        <mat-form-field appearance="fill">
+        <mat-form-field appearance="outline">
           <mat-label>Status</mat-label>
           <mat-select formControlName="status" required>
             <mat-option value="ativo">Disponível</mat-option>
@@ -22,8 +30,9 @@
           </mat-select>
         </mat-form-field>
 
-        <mat-form-field appearance="fill">
+        <mat-form-field appearance="outline">
           <mat-label>Telefone</mat-label>
+          <mat-icon matPrefix>phone</mat-icon>
           <input matInput mask="(00) 00000-0000" />
         </mat-form-field>
       </div>
