--- a/src/app/modules/gerencial/components/dashboard/dashboard.component.scss
+++ b/src/app/modules/gerencial/components/dashboard/dashboard.component.scss
@@ -12,7 +12,7 @@
 .custom-select {
   position: relative;
   float: right;
-  width: 270px;
+  width: 300px;
   bottom: 70px;
 }
 
@@ -46,83 +46,51 @@
   margin-top: 100px;
 }
 
-table {
-  width: 100%;
-  border-collapse: collapse;
-  margin-bottom: 20px;
-  background-color: #fff;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+.key_service {
+  color: #1503bcfd;
+  margin-left: 10px;
 }
 
-thead th {
-  background-color: #808282;
-  color: #0a0a0a;
-  padding: 12px;
-  text-align: left;
-  font-size: 16px;
+.custom-snackbar-dashboard {
+  background-color: #ff9800;
+  color: #fff;
+  bottom: 16px;
+  z-index: 1000;
+  border-radius: 4px;
+  padding: 8px 16px;
+  display: flex;
+  align-items: center;
+  font-weight: bold;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
 }
 
-tbody td {
-  padding: 12px;
-  border-bottom: 1px solid #ddd;
-  font-size: 14px;
+
+.notification-container {
+  position: fixed;
+  top: 16px;
+  right: 16px;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  z-index: 1000;
 }
 
-tbody tr:nth-child(even) {
-  background-color: #f9f9f9;
-}
-
-tbody tr:hover {
-  background-color: #f1f1f1;
-}
-
-.load-more-button {
-  background-color: #14a7d8;
-  color: black;
-  padding: 10px 20px;
-  border: 1px solid black;
-  border-radius: 5px;
+.notification {
+  display: flex;
+  align-items: center;
+  background-color: #ffeb3b;
+  padding: 8px 16px;
+  border-radius: 4px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
   cursor: pointer;
-  font-size: 16px;
-  float: right;
-  transition: background-color 0.3s ease;
+  transition: background-color 0.3s;
 }
 
-.load-more-button:hover {
-  background-color: #2135e5;
+.notification:hover {
+  background-color: #fdd835;
 }
 
-@media (max-width: 600px) {
-  table,
-  thead,
-  tbody,
-  th,
-  td,
-  tr {
-    display: block;
-    width: 100%;
-  }
-
-  thead {
-    display: none;
-  }
-
-  tbody tr {
-    margin-bottom: 15px;
-    border-bottom: 2px solid #ddd;
-  }
-
-  tbody td {
-    display: flex;
-    justify-content: space-between;
-    padding: 10px;
-    font-size: 14px;
-  }
-
-  tbody td::before {
-    content: attr(data-label);
-    font-weight: bold;
-    width: 50%;
-    display: inline-block;
-  }
+.notification mat-icon {
+  margin-right: 8px;
+  color: #f44336; /* Cor do ícone de ponto de exclamação */
 }
