--- a/src/app/modules/gerencial/gerencial.component.html
+++ b/src/app/modules/gerencial/gerencial.component.html
@@ -1,21 +1,16 @@
-<mat-drawer-container class="container" autosize>
-  <mat-drawer #drawer class="sidenav" [mode]="(isMobile$ | async) ? 'over' :  'side'" [opened]="!(isMobile$ | async)">
-    <app-menu-side-nav [menusToShow]="menus"></app-menu-side-nav>
-  </mat-drawer>
+<app-menu-side-nav [menusToShow]="menus"></app-menu-side-nav>
 
-  <div class="content">
-    <div class="header">
-      <app-bread-crumb
-        [title]="title"
-        [subtitle]="subtitle"
-        (toggleDrawerEvent)="drawer.toggle()"
-      >
-      </app-bread-crumb>
-      <app-toolbar></app-toolbar>
-    </div>
-
-    <div class="main-content" [class.blur]="drawer.opened && (isMobile$ | async)">
-      <router-outlet></router-outlet>
-    </div>
+<div class="content">
+  <div class="header">
+    <app-bread-crumb
+      [title]="title"
+      [subtitle]="subtitle"
+    >
+    </app-bread-crumb>
+    <!--<app-toolbar></app-toolbar>-->
   </div>
-</mat-drawer-container>
+
+  <div class="main-content">
+    <router-outlet></router-outlet>
+  </div>
+</div>
