--- a/src/app/modules/shared/components/toolbar/toolbar.component.scss
+++ b/src/app/modules/shared/components/toolbar/toolbar.component.scss
@@ -1,9 +1,11 @@
 .toolbar{
   gap: 12px;
+  width: 250px;
+  margin-right: 20px;
   height: 70px;
   display: flex;
   align-items: center;
-  border: 1px solid black;
+  border: 1px solid white;
   padding: 0px 20px;
   border-radius: 12px;
   box-shadow: rgba(50, 50, 93, 0) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -52px;
@@ -13,10 +15,9 @@
   }
 
   .welcome {
-    color: #3737ff;
+    color: #000000;
     font-size: large;
     font-weight: bold;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   }
-
 }
