--- a/src/app/modules/gerencial/components/cliente-modal/cliente-modal.component.html
+++ b/src/app/modules/gerencial/components/cliente-modal/cliente-modal.component.html
@@ -1,12 +1,34 @@
 <!-- cliente-modal.component.html -->
 <div class="modal-overlay" (click)="closeModal()">
   <div class="modal-content" (click)="$event.stopPropagation()">
-    <h2>CLIENTE</h2>
-    <button class="close-button" (click)="closeModal()">x</button>
-    <img [src]="cliente.imageUrl" alt="Cliente Image" class="modal-image" />
-    <h2>{{ cliente.name }}</h2>
-    <p><strong>Status:</strong> {{ cliente.status }}</p>
-    <p><strong>Telefone:</strong> {{ cliente.phone }}</p>
-    <p><strong>Endereço:</strong> {{ cliente.endereco }}</p>
+    <div class="card-section">
+      <div class="row items-center">
+        <ng-container>
+          <mat-icon>edit</mat-icon>
+        </ng-container>
+        <ng-container>
+          <mat-slide-toggle
+            color="primary"
+            matTooltip="Alterar status"
+            [checked]="cliente?.status === 'pendente'"
+            (change)="toggleClientStatus()"
+          >
+
+          </mat-slide-toggle>
+        </ng-container>
+        <ng-container>
+          <mat-icon>delete_outline</mat-icon>
+        </ng-container>
+      </div>
+    </div>
+    <div class="modal-content" (click)="$event.stopPropagation()">
+      <h2>CLIENTE</h2>
+      <button class="close-button" (click)="closeModal()">x</button>
+      <img [src]="cliente?.imageUrl" alt="Cliente Image" class="modal-image" />
+      <h2>{{ cliente?.name }}</h2>
+      <p><strong>Status:</strong> {{ cliente?.status }}</p>
+      <p><strong>Telefone:</strong> {{ cliente?.phone }}</p>
+      <p><strong>Endereço:</strong> {{ cliente?.endereco }}</p>
+    </div>
   </div>
 </div>
