--- a/src/app/modules/gerencial/components/chaveiros/components/add/add.component.html
+++ b/src/app/modules/gerencial/components/chaveiros/components/add/add.component.html
@@ -1,46 +1,47 @@
-<section class="details">
-  <app-card-section text="Dados do chaveiro">
-    <section class="wrapper" body>
-      <div class="row">
-        <mat-form-field appearance="outline">
-          <mat-label>Nome</mat-label>
-          <mat-icon matPrefix>person_pin_circle</mat-icon>
-          <input matInput apenasLetras />
-        </mat-form-field>
+<form [formGroup]="chaveiroForm">
+  <section class="details">
+    <app-card-section text="Dados do chaveiro">
+      <section class="wrapper" body>
+        <div class="row">
+          <mat-form-field appearance="outline">
+            <mat-label>Nome</mat-label>
+            <mat-icon matPrefix>person_pin_circle</mat-icon>
+            <input matInput formControlName="name" type="text" required />
+          </mat-form-field>
 
-        <mat-form-field appearance="outline">
-          <mat-label>Endereço</mat-label>
-          <mat-icon matPrefix>home</mat-icon>
-          <input matInput />
-        </mat-form-field>
+          <mat-form-field appearance="outline">
+            <mat-label>Endereço</mat-label>
+            <mat-icon matPrefix>home</mat-icon>
+            <input matInput formControlName="endereco" type="text" required />
+          </mat-form-field>
 
-        <mat-form-field class="field-image" appearance="outline">
-          <mat-label>URL da Imagem</mat-label>
-          <mat-icon matPrefix>image</mat-icon>
-          <input id="imageUrl" matInput formControlName="imageUrl" />
-        </mat-form-field>
-      </div>
+          <mat-form-field class="field-image" appearance="outline">
+            <mat-label>URL da Imagem</mat-label>
+            <mat-icon matPrefix>image</mat-icon>
+            <input matInput formControlName="imageUrl" type="text" />
+          </mat-form-field>
+        </div>
 
-      <div class="row">
-        <mat-form-field appearance="outline">
-          <mat-label>Status</mat-label>
-          <mat-select formControlName="status" required>
-            <mat-option value="ativo">Disponível</mat-option>
-            <mat-option value="inativo">Indisponível</mat-option>
-          </mat-select>
-        </mat-form-field>
+        <div class="row">
+          <mat-form-field appearance="outline">
+            <mat-label>Status</mat-label>
+            <mat-select matInput formControlName="status" type="text" required>
+              <mat-option value="disponivel">Disponível</mat-option>
+              <mat-option value="indisponivel">Indisponível</mat-option>
+            </mat-select>
+          </mat-form-field>
 
-        <mat-form-field appearance="outline">
-          <mat-label>Telefone</mat-label>
-          <mat-icon matPrefix>phone</mat-icon>
-          <input matInput mask="(00) 00000-0000" />
-        </mat-form-field>
-      </div>
-    </section>
-  </app-card-section>
+          <mat-form-field appearance="outline">
+            <mat-label>Telefone</mat-label>
+            <mat-icon matPrefix>phone</mat-icon>
+            <input matInput formControlName="phone" type="text" required />
+          </mat-form-field>
+        </div>
+      </section>
+    </app-card-section>
 
-  <div class="buttons">
-    <app-form-actions />
-  </div>
-
-</section>
+    <div class="buttons">
+      <app-form-actions (clickSaveEvent)="onSubmit()"></app-form-actions>
+    </div>
+  </section>
+</form>
