--- a/src/app/modules/gerencial/components/cliente-modal/cliente-modal.component.html
+++ b/src/app/modules/gerencial/components/cliente-modal/cliente-modal.component.html
@@ -10,7 +10,7 @@
           <mat-slide-toggle
             color="primary"
             matTooltip="Alterar status"
-            [checked]="cliente?.status === 'pendente'"
+            [checked]="cliente?.status === 'servido'"
             (change)="toggleClientStatus()"
           >
 
@@ -23,12 +23,19 @@
     </div>
     <div class="modal-content" (click)="$event.stopPropagation()">
       <h2>CLIENTE</h2>
-      <button class="close-button" (click)="closeModal()">x</button>
+
       <img [src]="cliente?.imageUrl" alt="Cliente Image" class="modal-image" />
       <h2>{{ cliente?.name }}</h2>
-      <p><strong>Status:</strong> {{ cliente?.status }}</p>
-      <p><strong>Telefone:</strong> {{ cliente?.phone }}</p>
-      <p><strong>Endereço:</strong> {{ cliente?.endereco }}</p>
+      <p>
+        <strong>Status:</strong> {{ cliente?.status }}
+      </p>
+      <p>
+        <strong>Telefone:</strong> {{ cliente?.phone }}
+      </p>
+      <p>
+        <strong>Endereço:</strong> {{ cliente?.endereco }}
+      </p>
     </div>
+    <button mat-button (click)="closeModal()" class="close-button">Fechar</button>
   </div>
 </div>
