--- a/src/app/modules/gerencial/components/cliente-modal/cliente-modal.component.scss
+++ b/src/app/modules/gerencial/components/cliente-modal/cliente-modal.component.scss
@@ -12,7 +12,7 @@
 }
 
 .modal-content {
-  background: rgb(225, 223, 223);
+  background: rgb(255, 255, 255);
   padding: 20px;
   border-radius: 8px;
   max-width: 90%; /* Limita a largura máxima do modal */
@@ -30,14 +30,19 @@
 }
 
 .close-button {
-  position: absolute;
-  top: -5px;
-  right: 9px;
-  background: none;
-  color: #fb1a1a;
-  border: none;
-  font-weight: bolder;
-  font-size: 22px;
-  cursor: pointer;
+  margin-top: 20px;
+  background-color: #ea172d;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  border-radius: 4px;
+  border: 1px solid black;
+  color: black;
+  font-weight: bold;
+  font-family: 'Times New Roman', Times, serif;
 }
 
+.close-button:hover {
+  background-color: #ff8a8a;
+  cursor: pointer;
+}
